<resources>
    <!--默认部分-->
    <string name="app_name">CourseEvaluation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--自行加入参考项目中需要的字符串-->
    <string name="menu_home">首页</string>
    <string name="menu_all_courses">所有课程</string>
    <string name="menu_my_info">我的</string>
    <string name="menu_footprint">足迹</string>
    <string name="menu_contact">联系我们</string>
</resources>
